2025-DEC-02 David Hoyt
* Update IccProfLib and IccXml to version to 2.3.1.1
* Security Patches
* Bug Fixes

2025-OCT-17 Max Derhak
* Update IccProfLib and IccXml to version to 2.3.1
* Update licenses in source code to match LICENSE.md
* Add CIccCmmSearch object allowing for color management using forward transforms
* Add IccApplySearch command line tool allowing for spectral reproduction using forward transforms
* Add support and examples for hybrid ICC/iccMAX profiles
* Add IccV5DspObsToV4Dsp command line tool allowing for creation of V4 display profiles using V5/hybrid observer specific color managment 
* Add example 2015 observer and Asano categorical observer PPC profiles
* Added support for multispectral images in IccApplyProfiles using hybrid ICC/iccMAX profiles
* Various bug fixes

2025-MAY-02 David Hoyt
* Align Cmakelists.txt
* Add IccProfLib/IccSignatureUtils.h debug helper
* Add research branch for CICD

2025-APR-12 David Hoyt
* Align Cmake X-Platform, Code Refactoring, Code Coverage + AFL

2024-10-08 Max Derhak
* Fixed bug with selecting transform type in CIccCmmConfig
* Allow auto selection of spectral xform when PCS is NULL
* Add CMY colorspace support for it8 files

2024-10-02 Max Derhak
* Incorporate changes from Bug Tracker analysis
* Added version of ValidateProfile() function to validate embedded in memory profiles
* Fixed minor offset sync problem with LutAtoB reading

2024-09-25 Max Derhak
* Refactor PCS operation to improve performance

2024-05-10 Max Derhak
* Added JSON config file ultility code for use by applications (added new dependency on JSON for Modern C++ - see https://github.com/nlohmann/json_
* Modified IccApplyNamedCmm and iccApplyProfiles to optionally use JSON configuraiton files to control behavior resulting in new features
* Added limited support to read/write from CGATS IT8 files using iccApplyNamedProfiles
* PCC processing elements can now have access to CMM environment variables