@@ -1,3 +1,3 @@
 #ifndef ICCPROFLIBVER
-#define ICCPROFLIBVER "2.3.1.1"
+#define ICCPROFLIBVER "2.3.1.2"
 #endif
