@@ -1,3 +1,8 @@
+2026-JAN-04 David Hoyt
+* Update IccProfLib and IccXml to version v2.3.1.2
+* Security Patches
+* Bug Fixes
+
 2025-DEC-02 David Hoyt
 * Update IccProfLib and IccXml to version to 2.3.1.1
 * Security Patches
